# qa-bot-for-docs

./: .gitignore  .gitingore  .tasks  data_sample.txt  main.py  pyproject.toml  readme.md
reader/: markdown.py
